ordenação de listagem de faltas e listagem de pessoas